--- a/workflows_notebook.ipynb
+++ b/workflows_notebook.ipynb
@@ -5,6 +5,7 @@
    "id": "be31e75beede2776",
    "metadata": {},
    "source": [
+    "# Copyright 2024 Cognite AS\n",
     "# Data Workflows Hands-on Exercises \n",
     "\n",
     "This notebook showcases the functionalities offered by the Cognite Data Fusion Data Workflows. In this notebook, we will create some dummy Functions, TimeSeries, and Transformations for use in the rest of the notebook exercises. \n",
